[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Building.gd" type="Script" id=1]
[ext_resource path="res://PNG/Default size/Structure/scifiStructure_04.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.7344, 30.0419 )

[node name="Building" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="BounceTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
[connection signal="timeout" from="BounceTimer" to="." method="_on_BounceTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
